src/objects/Project_Cost__c.object
<CustomObject>
    <description>The Project Cost object tracks project cost level data to facilitate forecasting via the revenue management module of Financial Force.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Project__r.pse__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_Cost__c</fullName>
        <formula>Project__r.Budgeted_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBU_CoE_SS__c</fullName>
        <formula>TEXT(Project__r.Client_BusinessUnit_CBU__c)</formula>
        <label>CBU/CoE/SS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_From_Budget__c</fullName>
        <description>Roll-up from related budgets</description>
        <label>Cost From Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP_Cost__c</fullName>
        <formula>Project__r.Total_ERP_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERP_Project_Code__c</fullName>
        <description>ERP Project or Cost center code</description>
        <externalId>true</externalId>
        <inlineHelpText>ERP Project or Cost center code</inlineHelpText>
        <label>ERP Project Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Project__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>Project__r.pse__Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecast__c</fullName>
        <formula>IF(Project__r.pse__Include_In_Forecasting__c = TRUE, TRUE, FALSE)</formula>
        <label>Include in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <formula>Project__r.pse__Practice__r.Name</formula>
        <label>Practice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Costs</relationshipLabel>
        <relationshipName>Project_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Project__r.pse__Region__r.Name</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Type__c</fullName>
        <formula>TEXT(Project__r.Reporting_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Sub_Services__c</fullName>
        <label>Services/Sub-Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Services_Sub_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Project__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffrrtemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM Template</label>
        <referenceTo>ffrr__Template__c</referenceTo>
        <relationshipLabel>Project Costs</relationshipLabel>
        <relationshipName>Project_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Cost</label>
    <nameField>
        <label>Project Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>